# allegro

./: CMakeLists.txt  README.md
include/: .Logger.hpp.swp  Config.hpp  Kinect.hpp  Logger.hpp
src/: Kinect.cpp  Logger.cpp  main.cpp
